clusters/my-cluster/apps/cabot-book/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabot-book
  namespace: my-cluster
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: cabot-book
  template:
    metadata:
      labels:
        app: cabot-book
    spec:
      containers:
      - name: cabot-book
        image: ghcr.io/dgunzy/cabot-book:latest
        ports:
          - name: web
            containerPort: 8080 
        resources:
          limits:
            memory: "556Mi"
            cpu: "500m"
          requests:
            memory: "556Mi"
            cpu: "250m"
