clusters/my-cluster/apps/cabot-book/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-book-service 
  namespace: my-cluster
spec: 
  type: ClusterIP
  ports:
    - port: 7070
      targetPort: web 
  selector:
    app: cabot-book
