clusters/my-cluster/apps/cabot-book/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cabot-book 
  namespace: my-cluster
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cabotcupbook.com
    secretName: cabotcupbook-tls
  rules:
    - host: cabotcupbook.com
      http:
        paths:
          - pathType: Prefix
            path: / 
            backend:
              service:
                name: cabot-book-service
                port:
                  number: 7070
